--- a/package.json
+++ b/package.json
@@ -9,10 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/html-elements": "^0.10.1",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/core": "^3.0.10",
+    "@gluestack-ui/themed": "^1.1.73",
+    "@gluestack-ui/utils": "^3.0.11",
+    "@legendapp/motion": "^2.4.0",
+    "@react-native-community/slider": "^5.1.0",
+    "@react-navigation/drawer": "^7.7.1",
+    "@react-navigation/native": "^7.1.19",
+    "babel-plugin-module-resolver": "^5.0.2",
     "expo": "~54.0.20",
     "expo-status-bar": "~3.0.8",
+    "lucide-react-native": "^0.510.0",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.5"
+    "react-aria": "^3.33.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "^0.5.1",
+    "react-stately": "^3.39.0",
+    "tailwind-variants": "^0.1.20",
+    "tailwindcss": "^3.4.18",
+    "@expo/vector-icons": "^15.0.3"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "@types/react": "~19.1.10",
+    "babel-preset-expo": "^54.0.6",
+    "typescript": "~5.9.2"
+  }
 }
