--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/html-elements": "^0.10.1",
+    "@expo/html-elements": "^0.12.5",
+    "@expo/vector-icons": "^15.0.3",
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/core": "^3.0.10",
@@ -37,8 +38,7 @@
     "react-native-worklets": "^0.5.1",
     "react-stately": "^3.39.0",
     "tailwind-variants": "^0.1.20",
-    "tailwindcss": "^3.4.18",
-    "@expo/vector-icons": "^15.0.3"
+    "tailwindcss": "^3.4.18"
   },
   "private": true,
   "devDependencies": {
