--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gluestack-style/react": "^1.0.57",
     "@gluestack-ui/config": "^1.1.20",
     "@gluestack-ui/core": "^3.0.10",
+    "@gluestack-ui/react": "^0.1.3",
     "@gluestack-ui/themed": "^1.1.73",
     "@gluestack-ui/utils": "^3.0.11",
     "@legendapp/motion": "^2.4.0",
@@ -43,6 +44,7 @@
   "private": true,
   "devDependencies": {
     "@types/react": "~19.1.10",
+    "@types/react-native": "^0.72.8",
     "babel-preset-expo": "^54.0.6",
     "typescript": "~5.9.2"
   }
